--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ stdlib('c') }}
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - cython >=0.29.13                       # [build_platform != target_platform]
     - python                                 # [build_platform != target_platform]
   host:
     - python
