Correct variable case for `PYTHON` in install script

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
 
 outputs:
   - name: {{ name|lower }}-python
-    script: {{ PYTHON }} -m pip install . -vv
+    script: {{ python }} -m pip install . -vv
     requirements:
       build:
         - {{ compiler('c') }}
