Add build script for FreeSASA Python package installation

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
 
 outputs:
   - name: {{ name|lower }}-python
-    script: ${PYTHON} -m pip install . -vv
+    script: build_freesasa-python.sh
     requirements:
       build:
         - {{ compiler('c') }}
