Add pip check command to test section for `freesasa-python` output

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,6 +48,10 @@ outputs:
     test:
       imports:
         - freesasa
+      commands:
+        - pip check
+      requires:
+        - pip
 
 about:
   home: http://freesasa.github.io
