--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -5,7 +5,7 @@ build_platform:
 conda_build:
   error_overlinking: true
   pkg_format: '2'
-conda_forge_output_validation: true
+conda_forge_output_validation: false  # TODO: Enable after version bump
 github:
   branch_name: main
   tooling_branch_name: main
